--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,12 +31,12 @@ services:
   # The Scraper Service
   scraper:
     build: ./scraper
+    env_file: ".env"
     environment:
       - POSTGRES_NAME=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_HOST=db
-      - SCRAPE_URL=${SCRAPE_URL}
     depends_on:
       - db
 
