--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,28 @@ services:
     depends_on:
       - db
 
+  # Production-ready Django Web App Service
+  webapp-prod:
+    build: 
+      context: ./webapp
+      dockerfile: Dockerfile
+    command: sh -c "uv run python webapp/manage.py collectstatic --noinput && uv run gunicorn webapp.wsgi:application --bind 0.0.0.0:8000 --workers 3"
+    volumes:
+      - ./webapp:/app/webapp
+      - static_volume:/app/webapp/staticfiles
+    ports:
+      - "8000:8000"
+    environment:
+      - SECRET_KEY=${SECRET_KEY}
+      - DJANGO_SETTINGS_MODULE=webapp.settings_prod
+      - POSTGRES_NAME=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=db
+    depends_on:
+      - db
+    restart: unless-stopped
+
   # The Scraper Service
   scrapers:
     build:
@@ -66,3 +88,4 @@ services:
 
 volumes:
   postgres_data:
+  static_volume:
