--- a/webapp/pyproject.toml
+++ b/webapp/pyproject.toml
@@ -7,22 +7,19 @@ dependencies = [
     # Django and web framework
     "django>=5.2.4",
     "asgiref>=3.9.1",
-    
     # Database
     "psycopg2-binary>=2.9.10",
-    
     # Data validation (for API integration)
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
-    
     # Utilities
     "python-dotenv>=1.1.1",
-    
-    # Testing dependencies  
+    # Testing dependencies
     "pytest>=8.4.1",
     "pytest-django>=4.8.0",
     "pytest-html>=4.0.2",
     "pytest-metadata>=3.1.1",
+    "gunicorn>=23.0.0",
 ]
 
 [build-system]
