Update production configuration files for VPS deployment with SSL and nginx

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,9 +1,14 @@
 # AutoDropshipper Production Environment Variables
 # Copy this file to .env.production and fill in your values
 
+# Domain Configuration (using FreeDNS from afraid.org)
+DOMAIN=autodropshipper.mooo.com
+ALLOWED_HOSTS=autodropshipper.mooo.com,74.208.197.137
+
 # Django Settings
 SECRET_KEY=your-secret-key-here-generate-with-django-get-random-secret-key
 DJANGO_SETTINGS_MODULE=webapp.settings_prod
+USE_SSL=false  # Will be set to true after SSL setup
 
 # Database Configuration
 POSTGRES_DB=autodropshipper
