--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -63,11 +63,11 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        server_name _;
+        server_name autodropshipper.mooo.com 74.208.197.137 _;
         
         # Allow Let's Encrypt challenge
         location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
+            root /var/www/html;
         }
         
         # Redirect all other traffic to HTTPS
@@ -76,28 +76,26 @@ http {
         }
     }
 
-    # HTTPS server (will be activated after SSL setup)
+    # HTTPS server
     server {
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
-        server_name 74.208.197.137;  # Replace with your domain when ready
-
-        # SSL configuration (uncomment after running certbot)
-        # ssl_certificate /etc/nginx/certs/fullchain.pem;
-        # ssl_certificate_key /etc/nginx/certs/privkey.pem;
-        # ssl_session_timeout 1d;
-        # ssl_session_cache shared:SSL:50m;
-        # ssl_session_tickets off;
+        server_name autodropshipper.mooo.com;
+        
+        # SSL configuration
+        ssl_certificate /etc/nginx/certs/fullchain.pem;
+        ssl_certificate_key /etc/nginx/certs/privkey.pem;
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:50m;
+        ssl_session_tickets off;
         
         # Modern SSL configuration
-        # ssl_protocols TLSv1.2 TLSv1.3;
-        # ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK;
-        # ssl_prefer_server_ciphers on;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
         
-        # OCSP stapling
-        # ssl_stapling on;
-        # ssl_stapling_verify on;
-        # ssl_trusted_certificate /etc/nginx/certs/chain.pem;
+        # HSTS
+        add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
 
         # Security headers
         add_header X-Frame-Options "DENY" always;
@@ -105,9 +103,6 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
-        
-        # HSTS (uncomment after SSL is working)
-        # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         # Connection limiting
         limit_conn addr 10;
