Configure nginx to use ports 8080/8443 to avoid Xray VPN conflict

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,8 +15,8 @@ services:
       - ./nginx/certs:/etc/nginx/certs:ro
       - ./nginx/logs:/var/log/nginx
     ports:
-      - "80:80"      # HTTP (will redirect to HTTPS)
-      - "443:443"    # HTTPS main access
+      - "8080:80"    # HTTP on 8080 (will redirect to HTTPS)
+      - "8443:443"   # HTTPS on 8443 to avoid conflict with Xray
       # Port 8838 not exposed but available if needed
     depends_on:
       - webapp-prod
