--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -70,9 +70,9 @@ http {
             root /var/www/html;
         }
         
-        # Redirect all other traffic to HTTPS
+        # Redirect all other traffic to HTTPS on port 8443
         location / {
-            return 301 https://$host$request_uri;
+            return 301 https://$host:8443$request_uri;
         }
     }
 
