--- a/.env.production.example
+++ b/.env.production.example
@@ -2,8 +2,9 @@
 # Copy this file to .env.production and fill in your values
 
 # Domain Configuration (using FreeDNS from afraid.org)
+# Note: Using ports 8080/8443 to avoid conflict with Xray VPN
 DOMAIN=autodropshipper.mooo.com
-ALLOWED_HOSTS=autodropshipper.mooo.com,74.208.197.137
+ALLOWED_HOSTS=autodropshipper.mooo.com,74.208.197.137,autodropshipper.mooo.com:8443,74.208.197.137:8443
 
 # Django Settings
 SECRET_KEY=your-secret-key-here-generate-with-django-get-random-secret-key
