--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     build: 
       context: ./webapp
       dockerfile: Dockerfile
-    command: sh -c "uv run python webapp/manage.py collectstatic --noinput && uv run gunicorn webapp.wsgi:application --bind 0.0.0.0:8000 --workers 3"
+    command: sh -c "cd /app/webapp && uv run python manage.py collectstatic --noinput && uv run gunicorn webapp.wsgi:application --bind 0.0.0.0:8000 --workers 3"
     volumes:
       - ./webapp:/app/webapp
       - static_volume:/app/webapp/staticfiles
