Add localhost to ALLOWED_HOSTS for internal health checks from nginx container

--- a/.env.production.example
+++ b/.env.production.example
@@ -4,7 +4,7 @@
 # Domain Configuration (using FreeDNS from afraid.org)
 # Note: Using ports 8080/8443 to avoid conflict with Xray VPN
 DOMAIN=autodropshipper.mooo.com
-ALLOWED_HOSTS=autodropshipper.mooo.com,74.208.197.137,autodropshipper.mooo.com:8443,74.208.197.137:8443
+ALLOWED_HOSTS=autodropshipper.mooo.com,74.208.197.137,autodropshipper.mooo.com:8443,74.208.197.137:8443,localhost,localhost:8000
 
 # Django Settings
 SECRET_KEY=your-secret-key-here-generate-with-django-get-random-secret-key
